added singlefile support

--- a/c#/HashBuster.csproj
+++ b/c#/HashBuster.csproj
@@ -4,8 +4,12 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
     <RootNamespace>HashBuster</RootNamespace>
+    <PublishSingleFile>true</PublishSingleFile>
+    <SelfContained>true</SelfContained>
+    <RuntimeIdentifier>win-x64</RuntimeIdentifier>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <VersionPrefix>2023.10.3</VersionPrefix>
   </PropertyGroup>
 
   <ItemGroup>
